--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,13 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build
 
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+/*.js
 
 ### Vim ###
 [._]*.s[a-w][a-z]
