--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "jade": "^1.11.0",
     "mongodb": "^2.0.43",
     "socket.io": "^1.3.7"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "rimraf": "^2.4.3"
   }
 }
