--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ build
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
-/*.js
+app.js
 
 ### Vim ###
 [._]*.s[a-w][a-z]
