--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "kataoka",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "mongodb": "^2.0.43",
