--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.0",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "mongodb": "^2.0.43",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
